--- a/sandbox/ajax_upload/app/views/attachments/_form.html.erb
+++ b/sandbox/ajax_upload/app/views/attachments/_form.html.erb
@@ -8,7 +8,14 @@
 <% end %>
 <span id="attachments_fields"></span>
 <span class="add_attachment">
-<%= file_field_tag 'attachments_files', :id => nil, :multiple => true, :onchange => 'addInputFiles(this);' %>
+<%= file_field_tag 'attachments_files',
+      :id => nil,
+      :multiple => true,
+      :onchange => 'addInputFiles(this);',
+      :data => {
+        :max_file_size => Setting.attachment_max_size.to_i.kilobytes,
+        :max_file_size_message => l(:error_attachment_too_big, :max_size => number_to_human_size(Setting.attachment_max_size.to_i.kilobytes))
+      } %>
 (<%= l(:label_max_size) %>: <%= number_to_human_size(Setting.attachment_max_size.to_i.kilobytes) %>)
 </span>
 
@@ -16,8 +23,6 @@
 <%= javascript_tag do %>
   var ATTACHMENT_CONFIG = <%=
   {
-    :MAX_FILE_SIZE => Setting.attachment_max_size.to_i.kilobytes,
-    :L_MAX_FILE_SIZE_EXCEEDED => l(:error_attachment_too_big, :max_size => number_to_human_size(Setting.attachment_max_size.to_i.kilobytes)),
     :UPLOAD_PATH => uploads_path,
     :HL_DESCRIPTION_PLACEHOLDER => h(l(:label_optional_description)),
     :H_DELETE_IMAGE_PATH => h(image_path('delete.png')),
