--- a/sandbox/ajax_upload/app/views/attachments/_form.html.erb
+++ b/sandbox/ajax_upload/app/views/attachments/_form.html.erb
@@ -15,7 +15,7 @@
       :data => {
         :max_file_size => Setting.attachment_max_size.to_i.kilobytes,
         :max_file_size_message => l(:error_attachment_too_big, :max_size => number_to_human_size(Setting.attachment_max_size.to_i.kilobytes)),
-        :upload_path => uploads_path,
+        :upload_path => uploads_path(:format => 'js'),
         :description_placeholder => l(:label_optional_description)
       } %>
 (<%= l(:label_max_size) %>: <%= number_to_human_size(Setting.attachment_max_size.to_i.kilobytes) %>)
