--- a/sandbox/ajax_upload/app/views/attachments/upload.js.erb
+++ b/sandbox/ajax_upload/app/views/attachments/upload.js.erb
@@ -1,7 +1,9 @@
 var fileSpan = $('#attachments_<%= j params[:attachment_id] %>');
-$('<input type="hidden" name="attachments[<%= j params[:attachment_id] %>][token]"/>').val('<%= j @attachment.token %>').appendTo(fileSpan);
-fileSpan.find('a.remove-upload').
-  attr('data-remote', 'true').
-  attr('data-method', 'delete').
-  attr('href', '<%= j attachment_path(@attachment, :attachment_id => params[:attachment_id]) %>');
-fileSpan.find('a.remove-upload').removeAttr('onclick');
+$('<input>', { type: 'hidden', name: 'attachments[<%= j params[:attachment_id] %>][token]' } ).val('<%= j @attachment.token %>').appendTo(fileSpan);
+fileSpan.find('a.remove-upload')
+  .attr({
+    "data-remote": true,
+    "data-method": 'delete',
+    href: '<%= j attachment_path(@attachment, :attachment_id => params[:attachment_id]) %>'
+  })
+  .off('click');
