Adds integration tests on ajax uploads.
git-svn-id: http://svn.redmine.org/redmine@10753 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/sandbox/ajax_upload/app/views/attachments/destroy.js.erb
+++ b/sandbox/ajax_upload/app/views/attachments/destroy.js.erb
@@ -1,2 +1,1 @@
-var fileSpan = $('#attachments_<%= j params[:attachment_id] %>');
-fileSpan.remove();
+$('#attachments_<%= j params[:attachment_id] %>').remove();
