--- a/sandbox/ajax_upload/app/views/attachments/upload.js.erb
+++ b/sandbox/ajax_upload/app/views/attachments/upload.js.erb
@@ -4,6 +4,6 @@ fileSpan.find('a.remove-upload')
   .attr({
     "data-remote": true,
     "data-method": 'delete',
-    href: '<%= j attachment_path(@attachment, :attachment_id => params[:attachment_id]) %>'
+    href: '<%= j attachment_path(@attachment, :attachment_id => params[:attachment_id], :format => 'js') %>'
   })
   .off('click');
