--- a/sandbox/ajax_upload/app/views/attachments/_form.html.erb
+++ b/sandbox/ajax_upload/app/views/attachments/_form.html.erb
@@ -1,12 +1,15 @@
+<span id="attachments_fields">
 <% if defined?(container) && container && container.saved_attachments %>
   <% container.saved_attachments.each_with_index do |attachment, i| %>
-    <span class="icon icon-attachment" style="display:block; line-height:1.5em;">
-      <%= h(attachment.filename) %> (<%= number_to_human_size(attachment.filesize) %>)
+    <span id="attachments_p<%= i %>">
+      <%= text_field_tag("attachments[p#{i}][filename]", attachment.filename, :class => 'filename') +
+          text_field_tag("attachments[p#{i}][description]", attachment.description, :maxlength => 255, :placeholder => l(:label_optional_description), :class => 'description') +
+          link_to('&nbsp;'.html_safe, attachment_path(attachment, :attachment_id => "p#{i}", :format => 'js'), :method => 'delete', :remote => true, :class => 'remove-upload') %>
       <%= hidden_field_tag "attachments[p#{i}][token]", "#{attachment.token}" %>
     </span>
   <% end %>
 <% end %>
-<span id="attachments_fields"></span>
+</span>
 <span class="add_attachment">
 <%= file_field_tag 'attachments_files',
       :id => nil,
