--- a/sandbox/ajax_upload/public/stylesheets/application.css
+++ b/sandbox/ajax_upload/public/stylesheets/application.css
@@ -522,7 +522,7 @@ span.required {color: #bb0000;}
 #attachments_fields .ajax-waiting input.filename {background:url(../images/hourglass.png) no-repeat 0px 50%;}
 #attachments_fields .ajax-loading input.filename {background:url(../images/loading.gif) no-repeat 0px 50%;}
 #attachments_fields div.ui-progressbar { width: 100px; height:14px; margin: 2px 0 -5px 8px; display: inline-block; }
-a.remove-upload {background: url(../images/delete.png) no-repeat 1px 50%; width:18px; display:inline-block;}
+a.remove-upload {background: url(../images/delete.png) no-repeat 1px 50%; width:1px; display:inline-block; padding-left:16px;}
 a.remove-upload:hover {text-decoration:none !important;}
 
 div.fileover { background-color: lavender; }
