--- a/sandbox/custom_fields/app/views/custom_fields/_form.html.erb
+++ b/sandbox/custom_fields/app/views/custom_fields/_form.html.erb
@@ -8,7 +8,7 @@
 <p><%= f.text_field :name, :required => true %></p>
 <p><%= f.select :field_format, custom_field_formats_for_select(@custom_field), {}, :disabled => !@custom_field.new_record? %></p>
 
-<% if @custom_field.format_in? 'list', 'user', 'version' %>
+<% if @custom_field.format.multiple_supported %>
 <p>
   <%= f.check_box :multiple %>
   <% if !@custom_field.new_record? && @custom_field.multiple %>
@@ -17,32 +17,7 @@
 </p>
 <% end %>
 
-<% unless @custom_field.format_in? 'list', 'bool', 'date', 'user', 'version' %>
-<p><label for="custom_field_min_length"><%=l(:label_min_max_length)%></label>
-   <%= f.text_field :min_length, :size => 5, :no_label => true %> - 
-   <%= f.text_field :max_length, :size => 5, :no_label => true %><br />(<%=l(:text_min_max_length_info)%>)</p>
-<p><%= f.text_field :regexp, :size => 50 %><br />(<%=l(:text_regexp_info)%>)</p>
-<% end %>
-
-<% if @custom_field.format_in? 'list' %>
-<p>
-  <%= f.text_area :possible_values, :value => @custom_field.possible_values.to_a.join("\n"), :rows => 15 %>
-  <em class="info"><%= l(:text_custom_field_possible_values_info) %></em>
-</p>
-<% end %>
-
-<% case @custom_field.field_format %>
-<% when 'bool' %>
-  <p><%= f.check_box(:default_value) %></p>
-<% when 'text' %>
-  <p><%= f.text_area(:default_value, :rows => 8) %></p>
-<% when 'date' %>
-  <p><%= f.text_field(:default_value, :size => 10) %></p>
-  <%= calendar_for('custom_field_default_value') %>
-<% when 'user', 'version' %>
-<% else %>
-  <p><%= f.text_field(:default_value) %></p>
-<% end %>
+<%= render_custom_field_format_partial f, @custom_field %>
 
 <%= call_hook(:view_custom_fields_form_upper_box, :custom_field => @custom_field, :form => f) %>
 </div>
@@ -53,7 +28,9 @@ when "IssueCustomField" %>
     <p><%= f.check_box :is_required %></p>
     <p><%= f.check_box :is_for_all %></p>
     <p><%= f.check_box :is_filter %></p>
+    <% if @custom_field.format.searchable_supported %>
     <p><%= f.check_box :searchable %></p>
+    <% end %>
     <p>
       <label><%= l(:field_visible) %></label>
       <label class="block">
@@ -82,7 +59,9 @@ when "IssueCustomField" %>
 <% when "ProjectCustomField" %>
     <p><%= f.check_box :is_required %></p>
     <p><%= f.check_box :visible %></p>
+    <% if @custom_field.format.searchable_supported %>
     <p><%= f.check_box :searchable %></p>
+    <% end %>
     <p><%= f.check_box :is_filter %></p>
 
 <% when "VersionCustomField" %>
