--- a/sandbox/custom_fields/public/stylesheets/application.css
+++ b/sandbox/custom_fields/public/stylesheets/application.css
@@ -457,8 +457,8 @@ table.fields_permissions select {font-size:90%}
 table.fields_permissions td.readonly {background:#ddd;}
 table.fields_permissions td.required {background:#d88;}
 
-textarea#custom_field_possible_values {width: 99%}
-textarea#custom_field_default_value {width: 99%}
+textarea#custom_field_possible_values {width: 95%; resize:vertical}
+textarea#custom_field_default_value {width: 95%; resize:vertical}
 
 input#content_comments {width: 99%}
 
@@ -474,6 +474,8 @@ p.pagination {margin-top:8px; font-size: 90%}
 }
 
 html>body .tabular p {overflow:hidden;}
+
+.tabular input, .tabular select, .tabular textarea {max-width:95%}
 
 .tabular label{
   font-weight: bold;
