Adds check all links on custom field trackers.
git-svn-id: http://svn.redmine.org/redmine@12377 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/sandbox/custom_fields/app/views/custom_fields/_form.html.erb
+++ b/sandbox/custom_fields/app/views/custom_fields/_form.html.erb
@@ -89,7 +89,7 @@ when "IssueCustomField" %>
 <% if @custom_field.is_a?(IssueCustomField) %>
 </div>
 <div class="splitcontentright">
-  <fieldset class="box"><legend><%=l(:label_tracker_plural)%></legend>
+  <fieldset class="box" id="custom_field_tracker_ids"><legend><%=l(:label_tracker_plural)%></legend>
   <% Tracker.sorted.all.each do |tracker| %>
     <%= check_box_tag "custom_field[tracker_ids][]",
                       tracker.id,
@@ -100,6 +100,7 @@ when "IssueCustomField" %>
     </label>
   <% end %>
   <%= hidden_field_tag "custom_field[tracker_ids][]", '' %>
+  <p><%= check_all_links 'custom_field_tracker_ids' %></p>
   </fieldset>
 
   <fieldset class="box" id="custom_field_project_ids"><legend><%= l(:label_project_plural) %></legend>
