Removed duplicate ids.
git-svn-id: http://svn.redmine.org/redmine@12378 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/sandbox/custom_fields/app/views/custom_fields/formats/_user.html.erb
+++ b/sandbox/custom_fields/app/views/custom_fields/formats/_user.html.erb
@@ -12,7 +12,10 @@
   </label>
   <% Role.givable.sorted.each do |role| %>
     <label class="block custom_field_user_role" style="padding-left:2em;">
-      <%= check_box_tag 'custom_field[user_role][]', role.id, custom_field.user_role.is_a?(Array) && custom_field.user_role.include?(role.id.to_s) %>
+      <%= check_box_tag 'custom_field[user_role][]',
+            role.id, 
+            custom_field.user_role.is_a?(Array) && custom_field.user_role.include?(role.id.to_s),
+            :id => nil %>
       <%= role.name %>
     </label>
   <% end %>
