--- a/sandbox/custom_fields/app/views/custom_fields/_form.html.erb
+++ b/sandbox/custom_fields/app/views/custom_fields/_form.html.erb
@@ -45,7 +45,7 @@ when "IssueCustomField" %>
       </label>
       <% Role.givable.sorted.each do |role| %>
         <label class="block custom_field_role" style="padding-left:2em;">
-          <%= check_box_tag 'custom_field[role_ids][]', role.id, @custom_field.roles.include?(role) %>
+          <%= check_box_tag 'custom_field[role_ids][]', role.id, @custom_field.roles.include?(role), :id => nil %>
           <%= role.name %>
         </label>
       <% end %>
