--- a/sandbox/custom_fields/app/views/custom_fields/formats/_version.html.erb
+++ b/sandbox/custom_fields/app/views/custom_fields/formats/_version.html.erb
@@ -12,7 +12,10 @@
   </label>
   <% Version::VERSION_STATUSES.each do |status| %>
     <label class="block custom_field_version_status" style="padding-left:2em;">
-      <%= check_box_tag 'custom_field[version_status][]', status, custom_field.version_status.is_a?(Array) && custom_field.version_status.include?(status) %>
+      <%= check_box_tag 'custom_field[version_status][]',
+            status,
+            custom_field.version_status.is_a?(Array) && custom_field.version_status.include?(status),
+            :id => nil %>
       <%= l("version_status_#{status}") %>
     </label>
   <% end %>
