--- a/sandbox/custom_fields/app/views/custom_fields/formats/_list.html.erb
+++ b/sandbox/custom_fields/app/views/custom_fields/formats/_list.html.erb
@@ -3,3 +3,4 @@
   <em class="info"><%= l(:text_custom_field_possible_values_info) %></em>
 </p>
 <p><%= f.text_field(:default_value) %></p>
+<p><%= edit_tag_style_tag f %></p>
