Let boolean custom fields have no value.
git-svn-id: http://svn.redmine.org/redmine@12386 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/sandbox/custom_fields/app/views/custom_fields/formats/_bool.html.erb
+++ b/sandbox/custom_fields/app/views/custom_fields/formats/_bool.html.erb
@@ -1,1 +1,2 @@
-<p><%= f.check_box(:default_value) %></p>
+<p><%= f.select :default_value, [[]]+@custom_field.possible_values_options %></p>
+<p><%= edit_tag_style_tag f %></p>
