--- a/sandbox/custom_fields/public/stylesheets/application.css
+++ b/sandbox/custom_fields/public/stylesheets/application.css
@@ -574,6 +574,7 @@ em.info.error {padding-left:20px; background:url(../images/exclamation.png) no-r
 
 textarea.text_cf {width:95%; resize:vertical;}
 input.string_cf, input.link_cf {width:95%;}
+select.bool_cf {width:auto !important;}
 
 #tab-content-modules fieldset p {margin:3px 0 4px 0;}
 
