Add a description for custom fields.
git-svn-id: http://svn.redmine.org/redmine@12397 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/sandbox/custom_fields/app/views/custom_fields/_form.html.erb
+++ b/sandbox/custom_fields/app/views/custom_fields/_form.html.erb
@@ -6,6 +6,7 @@
 
 <div class="box tabular">
 <p><%= f.text_field :name, :required => true %></p>
+<p><%= f.text_area :description, :rows => 7 %></p>
 <p><%= f.select :field_format, custom_field_formats_for_select(@custom_field), {}, :disabled => !@custom_field.new_record? %></p>
 
 <% if @custom_field.format.multiple_supported %>
