--- a/sandbox/custom_fields/app/views/custom_fields/_form.html.erb
+++ b/sandbox/custom_fields/app/views/custom_fields/_form.html.erb
@@ -1,9 +1,6 @@
 <%= error_messages_for 'custom_field' %>
 
-<% if @custom_field.is_a?(IssueCustomField) %>
 <div class="splitcontentleft">
-<% end %>
-
 <div class="box tabular">
 <p><%= f.text_field :name, :required => true %></p>
 <p><%= f.text_area :description, :rows => 7 %></p>
@@ -22,7 +19,10 @@
 
 <%= call_hook(:view_custom_fields_form_upper_box, :custom_field => @custom_field, :form => f) %>
 </div>
+<p><%= submit_tag l(:button_save) %></p>
+</div>
 
+<div class="splitcontentright">
 <div class="box tabular">
 <% case @custom_field.class.name
 when "IssueCustomField" %>
@@ -85,11 +85,8 @@ when "IssueCustomField" %>
 <% end %>
 <%= call_hook(:"view_custom_fields_form_#{@custom_field.type.to_s.underscore}", :custom_field => @custom_field, :form => f) %>
 </div>
-<%= submit_tag l(:button_save) %>
 
 <% if @custom_field.is_a?(IssueCustomField) %>
-</div>
-<div class="splitcontentright">
   <fieldset class="box" id="custom_field_tracker_ids"><legend><%=l(:label_tracker_plural)%></legend>
   <% Tracker.sorted.all.each do |tracker| %>
     <%= check_box_tag "custom_field[tracker_ids][]",
@@ -111,7 +108,7 @@ when "IssueCustomField" %>
     <%= hidden_field_tag('custom_field[project_ids][]', '', :id => nil) %>
     <p><%= check_all_links 'custom_field_project_ids' %></p>
   </fieldset>
-</div>
 <% end %>
+</div>
 
 <% include_calendar_headers_tags %>
